--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="bundle.css">
+	<link rel="stylesheet" href="index.css">
     <script>document.documentElement.className="";</script>
 	<!--[if lt IE 9]><script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script><![endif]-->
 </head>
